--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ function menuUl1(){
     // 插入超連結+樣式的類名
     for(var i=0;i<ArrLi1.length;i++){
         var liia=document.createElement('a')
-        liia.setAttribute("href", './old/'+ArrLi1[i])
+        liia.setAttribute("href", './x-to-h/'+ArrLi1[i])
         var lii=document.createElement('li')
         lii.innerHTML=(i+1)+'.'+ArrLi1[i]
         lii.className='myli'
