--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ function menuUl1(){
     <!--<div id="dhout"><iframe src="Lum.html" frameborder="0"></iframe></div>-->
     <ul id="menu">
         <li class="item"><a href="javascript:window.location.reload()">重整頁面</a></li>
-        <li class="item"><a href="file:///D:/GitHub/mycoding/%E8%B3%87%E6%96%99%E5%BA%AB%E7%9A%84%E9%80%A3%E7%B5%90%E9%BB%9Emoble.html" target="_blank">資料連結點</a></li>
+        <li class="item"><a href="https://adbdao.github.io/mycoding/%E8%B3%87%E6%96%99%E5%BA%AB%E7%9A%84%E9%80%A3%E7%B5%90%E9%BB%9Eol.html" target="_blank">資料連結點</a></li>
         <li class="item"><a href="../">上一層目錄</a></li>
         <li class="item"><a href="./">本層目錄</a></li>
         <li class="item" id="li1"><a href="x-to-h/">轉換表</a></li>
