--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset="utf-8">
     <head>
-    <title>自己程式的目錄</title>
+    <title>律藏會集、三大部、戒律諸書</title>
     <base target="_blank">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <style>
@@ -214,8 +214,8 @@ from {-o-transform: rotate(360deg);}
 to {-o-transform: rotate(0deg);}}
 
 
-html {background: -webkit-linear-gradient(left, olive 0.00%, olivedrab 90.00%);
-background: linear-gradient(left, olive 0.00%, olivedrab 90.00%);
+html {background: -webkit-linear-gradient(left, peru 0.00%, gold 90.00%);
+background: linear-gradient(left, peru 0.00%, gold 90.00%);
 /*background-size: 100vw 200vh;
 background-repeat: no-repeat;*/
 
