--- a/index.html
+++ b/index.html
@@ -351,9 +351,7 @@ marginheight:10px;*/
 }
 </style>
 <script>
-var ArrLi=[
-'index.html','README.md','律藏會集_5種主題.html','鈔 記.html','行 宗 記.html','行宗記.pdf','濟  緣  記.html','廣化律師全集(未受具閱讀版).html','廣化律師全集.html','演講次序(對初學介紹戒定慧).txt'
-]
+var ArrLi=['index.html','README.md','律藏會集_5種主題.html','鈔 記.html','行 宗 記.html','行宗記.pdf','濟  緣  記.html','廣化律師全集(未受具閱讀版).html','廣化律師全集.html','演講次序(對初學介紹戒定慧).txt','佛恩寺結大界唱相文.html']
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
