--- a/佛恩寺結大界唱相文.html
+++ b/佛恩寺結大界唱相文.html
@@ -58,12 +58,12 @@ input {height: 30px;}
 未受具戒者出否？　此眾無未受具戒者。<br/>
 僧今和合何所作為？　結戒場羯磨。<br/></b>
 <h3>唱相師：大德(姊)僧聽！我識相(我此住處)，比丘(比丘尼)某甲，為僧唱四方小界相。</h3>
-從本寺<span class="m">5</span class="m">樓戒壇內東南角，以戒壇內東南角白鐵柱為標；<br/>
-<span class="r">從此西迴</span class="r">，沿紅繩，至戒壇內西南角，以戒壇內西南角白鐵柱為標；<br/>
-<span class="o">從此北迴</span class="o">，沿紅繩，至戒壇內西北角，以戒壇內西北角白鐵柱為標；<br/>
-<span class="yg">從此東迴</span class="yg">，沿紅繩，至戒壇內東北角，以戒壇內東北角白鐵柱為標；<br/>
-<span class="b">從此南迴</span class="b">，沿紅繩，還至戒壇內東南角，以戒壇內東南角白鐵柱為標，<br/>
-此是戒場外相一周訖。（三唱）<br/>
+從本寺<span class="m">5</span class="m">樓戒場內東南角，以牆角為標；<br/>
+<span class="r">從此西迴</span class="r">，沿牆壁內緣，至戒場內西南角，以牆角為標；<br/>
+<span class="o">從此北迴</span class="o">，沿牆壁內緣，至戒場內西北角，以牆角為標；<br/>
+<span class="yg">從此東迴</span class="yg">，沿牆壁內緣，至戒場內東北角，以牆角為標；<br/>
+<span class="b">從此南迴</span class="b">，沿牆壁內緣，還至戒場內東南角，以牆角為標，<br/>
+此是戒場外相一(二三)周訖。（三唱）<br/>
 <br/>
 （唱已向上一拜，問訊，歸位。若有斜曲隨事稱之。在唱相時，大眾隨著旋轉，面向彼方，專心憶想彼方標相，儼然如在目前。唱相竟，仍對面站。）<br/>
 註：《鈔記三三》二四文：唱相中不牒人名。<br/>
@@ -85,12 +85,12 @@ input {height: 30px;}
 僧今和合何所作為？　結大界羯磨。<br/></b>
 <h3>唱相師：大德(姊)僧聽！我識相(我此住處)，比丘(比丘尼)某甲，為僧唱四方大界內外相。</h3>
 <h3>１先唱內相：</h3>
-從本寺<span class="m">5</span class="m">樓大界內相東南角，以戒壇東南角柱為標；<br/>
-<span class="r">從此西迴</span class="r">，沿戒壇門口，至西南角，以戒壇西南角柱為標；<br/>
-<span class="o">從此北迴</span class="o">，沿戒壇柱，至西北角，以戒壇西北角柱為標；<br/>
-<span class="yg">從此東迴</span class="yg">，沿戒壇柱，至東北角，以戒壇東北角柱為標；<br/>
-<span class="b">從此南迴</span class="b">，沿戒壇柱，還至東南角，以戒壇東南角柱為標，<br/>
-此是大界內相一周訖。<br/>
+從本寺<span class="m">5</span class="m">樓大界內相東南角，以鐵柱牆角為標；<br/>
+<span class="r">從此西迴</span class="r">，沿牆壁外緣，經戒場門口，至大界內相西南角，以鐵柱牆角為標；<br/>
+<span class="o">從此北迴</span class="o">，沿牆壁外緣，至大界內相西北角，以鐵柱牆角為標；<br/>
+<span class="yg">從此東迴</span class="yg">，沿牆壁外緣，至大界內相東北角，以鐵柱牆角為標；<br/>
+<span class="b">從此南迴</span class="b">，沿牆壁外緣，還至大界內相東南角，以鐵柱牆角為標，<br/>
+此是大界內相一(二三)周訖。<br/>
 <h3>２次唱外相：</h3>
 從本寺<span class="m">1</span class="m">樓大殿東南角，以：牆角為標。<br/>
 <span class="r">從此西迴</span class="r">，沿：大殿門口內緣地，經：玻璃大門，直至：西南角，以：牆角為標。<br/>
@@ -103,30 +103,30 @@ input {height: 30px;}
 再沿：牆壁內緣，<span class="dc">轉向</span class="dc">：三師<span class="p">寮房</span class="p">牆壁內緣，<span class="cy">穿牆而過</span class="cy">：直至：<i>陽台走廊</i><span class="m">大界標 5</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 6</span class="m">。<br/>
 <span class="r">從此西迴</span class="r">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 7</span class="m">。<br/>
-<span class="o">從此北迴</span class="o">，沿：地板內緣線，經：階梯<span class="b">藍線</span class="b">，直至：<span class="m">大界標 8</span class="m">。<br/>
-<span class="yg">從此東迴</span class="yg">，沿：<span class="b">藍線</span class="b">內緣，直至：<span class="m">大界標 9</span class="m">。<br/>
+<span class="o">從此北迴</span class="o">，沿：地板內緣線，經：階梯<span class="r">紅線</span class="r">，直至：<span class="m">大界標 8</span class="m">。<br/>
+<span class="yg">從此東迴</span class="yg">，沿：<span class="r">紅線</span class="r">內緣，直至：<span class="m">大界標 9</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：樓地板內緣，直至：<span class="m">大界標 10</span class="m">。<br/>
-<span class="r">從此西迴</span class="r">，沿：<span class="b">藍線</span class="b">，經：牆壁外緣，直至：<span class="m">大界標 11</span class="m">。<br/>
+<span class="r">從此西迴</span class="r">，沿：<span class="r">紅線</span class="r">，經：牆壁外緣，直至：<span class="m">大界標 11</span class="m">。<br/>
 從此<span class="cy">穿牆而過</span class="cy">：直至：<span class="m">大界標 12</span class="m">。<br/>
 <span class="yg">從此東迴</span class="yg">，沿：樓梯外緣，直下至：<span class="m">4</span class="m">樓<span class="m">大界標 13</span class="m">。<br/>
 從此<span class="dc">轉向</span class="dc">引禮<span class="p">寮房</span class="p">，沿：牆壁內緣，<span class="cy">穿牆而過</span class="cy">：直至：<i>陽台走廊</i><span class="m">大界標 14</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 15</span class="m">。<br/>
 <span class="r">從此西迴</span class="r">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 16</span class="m">。<br/>
 <span class="o">從此北迴</span class="o">，<span class="cy">穿牆而過</span class="cy">：經：引禮<span class="p">寮房</span class="p">，<br/>
-再沿：牆壁內緣，經：觀禮台，<span class="cy">穿牆而過</span class="cy">：直至：<span class="m">大界標 17</span class="m">。<br/>
+再沿：牆壁內緣，經：觀禮台，<span class="cy">穿牆而過</span class="cy">：再沿牆壁內緣，   直至：<span class="m">大界標 17</span class="m">。<br/>
 <span class="r">從此西迴</span class="r">，沿：<span class="m">4</span class="m">樓樓板牆壁內緣，經：齋堂，直至：<span class="m">大界標 18</span class="m">。<br/>
 <span class="o">從此北迴</span class="o">，沿：牆壁內緣，直至：<span class="m">大界標 19</span class="m">。<br/>
 <span class="yg">從此東迴</span class="yg">，沿：牆壁內緣，經：齋堂佛像，直至：<span class="m">大界標 20</span class="m">。<br/>
 從此<span class="cy">穿牆而過</span class="cy">：進入書庫，沿：牆壁內緣，<span class="cy">穿牆而過</span class="cy">：直至：<i>陽台走廊</i><span class="m">大界標 21</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：<i>陽台走廊</i>地磚內緣，直至：<span class="m">大界標 22</span class="m">。<br/>
-<span class="r">從此西迴</span class="r">，沿：<span class="b">藍線</span class="b">，經：洗手台牆壁內緣，直至：<span class="m">大界標 23</span class="m">。<br/>
+<span class="r">從此西迴</span class="r">，沿：<span class="r">紅線</span class="r">，經：洗手台牆壁內緣，直至：<span class="m">大界標 23</span class="m">。<br/>
 再沿：牆壁內緣，<span class="dc">轉向</span class="dc">樓梯口，至：<span class="m">大界標 24</span class="m">。<br/>
 再沿：樓梯外緣，直下至：<span class="m">3</span class="m">樓<span class="m">大界標 25</span class="m">。<br/>
 再<span class="dc">轉向</span class="dc">入廁所，沿：牆壁內緣，<span class="cy">穿牆而過</span class="cy">：直至：<i>陽台走廊</i><span class="m">大界標 26</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 27</span class="m">。<br/>
 <span class="r">從此西迴</span class="r">，沿：<i>陽台走廊</i>地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 28</span class="m">。<br/>
 <span class="o">從此北迴</span class="o">，沿：<span class="r">紅線</span class="r">，<span class="cy">穿牆而過</span class="cy">：經：戒子<span class="p">寮房</span class="p">，直至：<span class="m">大界標 29</span class="m">。<br/>
-再沿：牆壁內緣，經：<span class="m">3</span class="m">樓大殿東側門口前的<span class="r">紅線</span class="r">，<span class="cy">穿牆而過</span class="cy">：經：戒子<span class="p">寮房</span class="p">，直至：<span class="m">大界標 30</span class="m">。<br/>
+再沿：牆壁內緣，經：<span class="m">3</span class="m">樓大殿東側門口前的<span class="r">紅線</span class="r">，<span class="cy">穿牆而過</span class="cy">：經：戒子<span class="p">寮房</span class="p">的書櫃，直至：<span class="m">大界標 30</span class="m">。<br/>
 <span class="yg">從此東迴</span class="yg">，沿：牆壁內緣，直至：<span class="m">大界標 31</span class="m">。<br/>
 再<span class="cy">穿牆而過</span class="cy">：直至：外廊<span class="m">大界標 32</span class="m">。<br/>
 <span class="b">從此南迴</span class="b">，沿：<span class="m">3</span class="m">樓外廊地磚內緣，直至：<i>陽台走廊</i><span class="m">大界標 33</span class="m">。<br/>
@@ -142,9 +142,9 @@ input {height: 30px;}
 再<span class="dc">轉向</span class="dc">方丈<span class="p">寮房</span class="p">，沿：牆壁內緣，<span class="cy">穿牆而過</span class="cy">：直至：大客堂<span class="m">大界標 43</span class="m">。<br/>
 <span class="r">從此西迴</span class="r">，沿：牆壁內緣，直至：<span class="m">大界標 44</span class="m">。<br/>
 <span class="o">從此北迴</span class="o">，沿：牆壁內緣，經：客堂門口，直至：<span class="m">大界標 45</span class="m">。<br/>
-再<span class="cy">穿牆而過</span class="cy">：還至：大殿東南角大界標。<br/>
+再<span class="cy">穿牆而過</span class="cy">：還至：大殿東南角，以牆角為標。<br/>
 <span class="r">以上皆除去房舍內外之柱子部份！</span class="r"><br/>
-此是大界外相一周訖。彼為內相，此為外相，此是大界內外相一周訖。（三唱）<br/>
+此是大界外相一(二三)周訖。彼為內相，此為外相，此是大界內外相一(二三)周訖。（三唱）<br/>
 <br/>
 （唱已，向上一拜，問訊、歸位。若有斜曲，隨事稱之，在唱相時，大眾隨著旋轉，面向彼方，專心憶想彼方標相，儼然如在目前。唱相竟，仍對面站。）<br/>
 <br/>
