--- a/南普陀寺歷任主持簡史表(直式).html
+++ b/南普陀寺歷任主持簡史表(直式).html
@@ -25,7 +25,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
-	color:black;
+	/*color:black;*/
 	font-size:12.0pt;
 	font-weight:400;
 	font-style:normal;
@@ -35,7 +35,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-number-format:General;
 	text-align:center;
 	vertical-align:middle;
-	border:.5pt solid windowtext;
+	border:.5pt solid limegreen;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:normal;}
@@ -56,7 +56,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-number-format:General;
 	text-align:center;
 	vertical-align:middle;
-	border:.5pt solid windowtext;
+	border:.5pt solid tomato;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:normal;}
@@ -75,8 +75,6 @@ rt
     border: 5px solid wheat;
     color: olive;
     font-size: 22pt;
-    /*width: 96vw;*/
-
 }
 --></style>
 </head>
@@ -104,8 +102,8 @@ rt
  <col class=xl651396 span=3 style='mso-width-source:userset;
  mso-width-alt:3271;'>
 
- <tr class=xl661396 height=22 style='height:16.2pt'>
-  <td height=22 class=xl661396 style='height:16.2pt;'>民國紀元</td>
+ <tr class=xl661396 style=''>
+  <td class=xl661396 style=''>民國紀元</td>
   <td class=xl661396 style='border-left:none;'>國強長老</td>
   <td class=xl661396 style='border-left:none;'>廣化長老</td>
   <td class=xl661396 style='border-left:none;'>道海長老</td>
@@ -114,8 +112,8 @@ rt
   <td class=xl661396 style='border-left:none;'>律航長老</td>
   <td class=xl661396 style='border-left:none;'>能學長老</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>9</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>出生</td>
@@ -132,8 +130,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>13</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -150,8 +148,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>25</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -168,8 +166,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>26</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -186,8 +184,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>出生</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>31</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>出家，22歲</td>
@@ -204,8 +202,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>33</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>接丹汕寺主持，24歲</td>
@@ -222,8 +220,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>36</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>建丹湖寺</td>
@@ -240,8 +238,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>37</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>因戰亂還俗</td>
@@ -258,8 +256,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>38</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>來台，退伍後，依住台中寶善寺達善長老座下</td>
@@ -276,8 +274,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>40</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>於隆道長老座下剃度</td>
@@ -294,8 +292,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>41</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>借台中寶覺寺辦「台中佛學院」</td>
@@ -313,8 +311,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>42</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -331,8 +329,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>出家</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>43</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -349,8 +347,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>44</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>在台中寶覺寺受三壇大戒，任台中北屯區三光寺主持</td>
@@ -367,8 +365,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>在台中寶覺寺受三壇大戒</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>45</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -385,8 +383,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=130 style='height:97.2pt'>
-  <td height=130 class=xl651396 style='height:97.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>46</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>阿添伯介紹買南普陀寺的地(2小時後，大山寺來買)。南普陀寺第1期建設開始46～49年</td>
@@ -403,8 +401,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>48</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -421,8 +419,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>49</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第1期建設完成，大殿落成</td>
@@ -439,8 +437,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>52</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第1屆佛學院開辦</td>
@@ -457,8 +455,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>任南普陀佛學院總務主任</td>
  </tr>
- <tr height=108 style='height:81.0pt'>
-  <td height=108 class=xl651396 style='height:81.0pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>53</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>因見能海長老穿慈航大師的南傳袈裟，南普陀佛學院自此改穿南傳袈裟</td>
@@ -475,8 +473,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>任台中慈明寺佛學院訓導主任</td>
  </tr>
- <tr height=43 style='page-break-before:always;height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style='page-break-before:always;'>
+  <td class=xl651396 style='border-top:none;
   '>55</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>在台中十甲路建「華山製藥廠」</td>
@@ -493,8 +491,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>56</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第2期建設開始56～76年</td>
@@ -511,8 +509,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>59</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -529,8 +527,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>去香港讀能仁大學中文系</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>61</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺1樓準提殿落成</td>
@@ -547,8 +545,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>67</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺4樓臥佛殿落成，嚴家淦提字</td>
@@ -565,8 +563,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>68</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第2屆佛學院開辦</td>
@@ -583,8 +581,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=65 style='height:48.6pt'>
-  <td height=65 class=xl651396 style='height:48.6pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>70</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -601,13 +599,13 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>71</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
-  '>在華梵大學旁蓮華學佛園講戒</td>
+  '>在陽明山蓮華學佛園講戒</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
@@ -619,8 +617,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>76</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第2期建設完成，回大陸福建，重建丹汕寺</td>
@@ -637,13 +635,13 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=151 style='height:113.4pt'>
-  <td height=151 class=xl651396 style='height:113.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>77</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>寫信請廣化長老接南普陀寺主持</td>
   <td class=xl651396 style='border-top:none;border-left:none;
-  '>接南普陀寺主持。南普陀寺第3屆佛學院開辦(至今第13屆未斷)。創辦第1屆台中齋僧大會(至今未斷)</td>
+  '>接南普陀寺主持。南普陀寺第3屆佛學院開辦(相續至今第13屆)。創辦第1屆台中齋僧大會(相續至今)</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
@@ -655,8 +653,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>80</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -673,8 +671,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>82</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -691,8 +689,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>84</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -709,8 +707,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=86 style='height:64.8pt'>
-  <td height=86 class=xl651396 style='height:64.8pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>85</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -727,8 +725,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>任南普陀寺三壇大戒菩薩戒教授和尚</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>90</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>圓寂</td>
@@ -745,8 +743,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=43 style='height:32.4pt'>
-  <td height=43 class=xl651396 style='height:32.4pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>97</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -763,8 +761,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>102</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -781,8 +779,8 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
  </tr>
- <tr height=22 style='height:16.2pt'>
-  <td height=22 class=xl651396 style='height:16.2pt;border-top:none;
+ <tr style=''>
+  <td class=xl651396 style='border-top:none;
   '>107</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
@@ -800,7 +798,7 @@ rt
   '>圓寂</td>
  </tr>
  <![if supportMisalignedColumns]>
- <tr height=0 style='display:none'>
+ <tr style='display:none'>
   <td style=''></td>
   <td style=''></td>
   <td style=''></td>
