del file in DirToIndex,update:nanputo history and index

--- a/南普陀寺歷任主持簡史表(直式).html
+++ b/南普陀寺歷任主持簡史表(直式).html
@@ -4,9 +4,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf8">
-<meta name=ProgId content=Excel.Sheet>
+<!--<meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 14">
-<link rel=File-List href="南普陀寺歷任主持簡史表2.files/filelist.xml">
+<link rel=File-List href="南普陀寺歷任主持簡史表2.files/filelist.xml">-->
 <style id="南普陀寺歷任主持簡史表_1396_Styles"><!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
