Debug & update:nanputo history

--- a/南普陀寺歷任主持簡史表(直式).html
+++ b/南普陀寺歷任主持簡史表(直式).html
@@ -443,7 +443,7 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第1屆佛學院開辦</td>
   <td class=xl651396 style='border-top:none;border-left:none;
-  '>台中慈善寺主持交給振光長老</td>
+  '>台中慈善寺主持交給振光長老，任南普陀佛學院教務主任</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
@@ -459,7 +459,7 @@ rt
   <td class=xl651396 style='border-top:none;
   '>53</td>
   <td class=xl651396 style='border-top:none;border-left:none;
-  '>因見能海長老穿慈航大師的南傳袈裟，南普陀佛學院自此改穿南傳袈裟</td>
+  '>因見能學長老穿慈航大師的南傳袈裟，南普陀佛學院自此改穿南傳袈裟</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
@@ -569,7 +569,7 @@ rt
   <td class=xl651396 style='border-top:none;border-left:none;
   '>南普陀寺第2屆佛學院開辦</td>
   <td class=xl651396 style='border-top:none;border-left:none;
-  '>　</td>
+  '>任南普陀佛學院教務主任</td>
   <td class=xl651396 style='border-top:none;border-left:none;
   '>　</td>
   <td class=xl651396 style='border-top:none;border-left:none;
