Index add search

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ function dt() {
         <div id="Lumout">
         </div>
     <div id="mula">
-        <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;width:100px;" placeholder="輸入關鍵字查詢" onkeyup="dt()"></h1>
+        <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()"></h1>
     </div>
     </body>
 </html>
