all Style up to black background

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <style>
 /**{border-radius: 8px;padding: 3px;}*/
 
-::selection{background: indigo;color:yellow}
-::-moz-selection{background: indigo;color:yellow}
-td::selection,textarea::selection{background: darkred;color:yellow}
-td::-moz-selection,textarea::-moz-selection{background: darkred;color:yellow}
+::selection{background: indigo;color:yellow;}
+::-moz-selection{background: indigo;color:yellow;}
+td::selection,textarea::selection{background: darkred;color:yellow;}
+td::-moz-selection,textarea::-moz-selection{background: darkred;color:yellow;}
 
 .OutFu{
     box-shadow: -2px -2px 4px brown;
