--- a/行 宗 記.html
+++ b/行 宗 記.html
@@ -152,65 +152,93 @@ h4:hover,f4:hover{color:magenta;font-size:12pt;}
 h5:hover,f5:hover{color:red;font-size:12pt;}
 h6:hover,f6:hover{color:green;font-size:12pt;}
 h7:hover,f7:hover{color:blue;font-size:12pt;}*/
-#myValue {width: 200px;}
-#ol1 {margin: 0 20vh;}
+#myValue {width: 200px;background: #aca;}
+#myValue2 {width: 200px;background: snow;}
+#ol1 {margin: 0 0 0 20vh;}
+#ol2,#ol3,#ol4,#ol5,#ol6,#ol7,#ol8,#ol9,#ol10,#ol11,#ol12{padding:0px 30px;}
+div{display: none;}
+input {height: 30px;background:pink;color: navy;}
+.name {background:tan;color: darkred;}
+.g {background: gold;}
+.t {background: tomato;}
+.r {background: red;}
+.sb {background: skyblue;}
+.ky {background: khaki;}
+.pink {background: pink;}
+.y {background: yellow;}
+.o {background: orange;}
+.yg {background: yellowgreen;}
+.b {background: lightblue;}
+.p {background: mediumpurple;}
+.lg {background: limegreen;}
+.lsg {background: lightseagreen;}
+.lc {background: lightcyan;}
+.gy {background: greenyellow;}
+.tan {background: tan;}
+#reload {height: 40px;background: yellowgreen;}
 </style>
 <script>
 var oBody = document.getElementsByTagName('body')
-
 function changeColor(col, bg) {
-    oBody[0].style.color = col
-    oBody[0].style.background = bg
+body.style.color = col
+body.style.background = bg
 }
 function changeSize(sz) {
-    oBody[0].style.fontSize = sz
+body.style.fontSize = sz
+}
+function changeFamily(ff) {
+body.style.fontFamily = ff
 }
 window.onload = function () {
-    btn1.onclick = function () {
-        changeColor('black', 'beige')
-    }
-    btn2.onclick = function () {
-        changeColor('#ccb', '#000')
-    }
-    btn3.onclick = function () {
-        changeColor('darkslategray', 'khaki')
-    }
-    btn5.onclick = function () {
-        changeColor('darkblue', 'tan')
-    }
-    btn4.onclick = function () {
-        changeColor('maroon', '#aca')
-    }
-    btn6.onclick = function () {
-        changeSize('16pt')
-    }
-    btn7.onclick = function () {
-        changeSize('20pt')
-    }
-    btn8.onclick = function () {
-        changeSize('24pt')
-    }
-    btn9.onclick = function () {
-        changeSize('48pt')
-    }
-    myValue.onkeyup = function () {
-        changeSize(myValue.value + 'pt')
-    }
+btn1.onclick = function () {
+changeColor('black', 'beige')
+}
+btn2.onclick = function () {
+changeColor('#ccb', '#000')
+}
+btn3.onclick = function () {
+changeColor('darkslategray', 'khaki')
+}
+btn5.onclick = function () {
+changeColor('darkblue', 'tan')
+}
+btn4.onclick = function () {
+changeColor('maroon', '#aca')
+}
+btn6.onclick = function () {
+changeSize('16pt')
+}
+btn7.onclick = function () {
+changeSize('20pt')
+}
+btn8.onclick = function () {
+changeSize('24pt')
+}
+btn9.onclick = function () {
+changeSize('48pt')
+}
+myValue.onkeyup = function () {
+changeSize(myValue.value + 'pt')
+}
+myValue2.onkeyup = function () {
+changeFamily(myValue2.value)
+}
 }
 </script>
 </head>
-<body>
+<body id="body">
+<input id="reload" type="button" value="重整頁面" onclick="javascript:window.location.reload()" />
 <input id="btn1" type="button" value="白色系主題">
 <input id="btn3" type="button" value="黃色系主題">
 <input id="btn5" type="button" value="茶色系主題">
 <input id="btn4" type="button" value="綠色系主題">
 <input id="btn2" type="button" value="黑色系主題">
-<hr/>
 <input id="btn6" type="button" value="16號字">
 <input id="btn7" type="button" value="20號字">
 <input id="btn8" type="button" value="24號字">
 <input id="btn9" type="button" value="48號字">
-<input id="myValue" type="text" placeholder='輸入數字，立刻變換字體大小'/>
+<input id="myValue" type="text" placeholder='輸入數字，立刻變換字體大小' />
+<input id="myValue2" type="text" placeholder='輸入字型名稱，立刻變換字型' />
 <hr/>
 <ol id="ol1">
 <li><a href="#ff四分律含註戒本疏行宗記" name="rr四分律含註戒本疏行宗記">四分律含註戒本疏行宗記</a></li>
