--- a/襌堂日行規矩1.html
+++ b/襌堂日行規矩1.html
@@ -5,11 +5,11 @@
     <title>襌堂日行規矩(雙班雙行)</title>
 <style>
 *{border-radius: 8px;padding: 3px;}
-::selection{background: darkred;color:yellow}
-::-moz-selection{background: darkred;color:yellow}
-input:hover,textarea:hover{border: 2px solid fuchsia;box-shadow: 5px 5px 20px darkorchid}
-input:active,textarea:active{border-color: indigo #f3f #f6f indigo;border-width:5px;border-style:solid;box-shadow: 5px -5px 20px darkorchid}
-td:hover{border: 1px solid fuchsia;box-shadow: 5px 5px 20px darkorchid}
+::selection{background: darkred;color:yellow;}
+::-moz-selection{background: darkred;color:yellow;}
+input:hover,textarea:hover{border: 2px solid fuchsia;box-shadow: 5px 5px 20px darkorchid;}
+input:active,textarea:active{border-color: indigo #f3f #f6f indigo;border-width:5px;border-style:solid;box-shadow: 5px -5px 20px darkorchid;}
+td:hover{border: 1px solid fuchsia;box-shadow: 5px 5px 20px darkorchid;}
 #tab1{border: 3px solid darkgoldenrod;}
 td{border: 1px solid indigo;}
 input {height: 30px;}
@@ -22,30 +22,30 @@ input {height: 30px;}
 .name {background:tan;color: crimson;}
 
 #txt1{width: 80vw;height: 30vh;}
-#ch1911,#ch1911x,.g {font-weight: bold;color: gold}
-#myValue {width: 80vw;font-weight: bold;color: #aca}
-#myValue2 {width: 80vw;font-weight: bold;color: snow}
-#reValue,.t {font-weight: bold;color: tomato}
-#reUp,.r {font-weight: bold;color: red}
-.sb {font-weight: bold;color: skyblue}
-.cbg {font-weight: bold;background: cyan}
-.ky {font-weight: bold;background: khaki}
-.pink {font-weight: bold;color: pink}
-.y {font-weight: bold;background: yellow}
-.o {font-weight: bold;color: darkorange}
-.yg {font-weight: bold;color: green}
-.dc {font-weight: bold;color: darkcyan}
-.dg {font-weight: bold;color: salmon}
-.b {font-weight: bold;color: blue}
-.p {font-weight: bold;color: slateblue}
-.magenta {font-weight: bold;color: magenta}
-.dv {font-weight: bold;color: darkviolet}
+#ch1911,#ch1911x,.g {font-weight: bold;color: gold;}
+#myValue {width: 80vw;font-weight: bold;color: #aca;}
+#myValue2 {width: 80vw;font-weight: bold;color: snow;}
+#reValue,.t {font-weight: bold;color: tomato;}
+#reUp,.r {font-weight: bold;color: red;}
+.sb {font-weight: bold;color: skyblue;}
+.cbg {font-weight: bold;color: black;background: cyan;}
+.ky {font-weight: bold;color: black;background: khaki;}
+.pink {font-weight: bold;color: pink;}
+.y {font-weight: bold;color: black;background: yellow;}
+.o {font-weight: bold;color: darkorange;}
+.yg {font-weight: bold;color: green;}
+.dc {font-weight: bold;color: darkcyan;}
+.dg {font-weight: bold;color: salmon;}
+.b {font-weight: bold;color: blue;}
+.p {font-weight: bold;color: slateblue;}
+.magenta {font-weight: bold;color: magenta;}
+.dv {font-weight: bold;color: darkviolet;}
 
-#nbr {font-weight: bold;color: lightcyan}
-#btng2 {font-weight: bold;color: gold}
-#btng4,.gy {font-weight: bold;background: greenyellow}
-#btng5,.tan {font-weight: bold;color: tan}
-#reload {height: 40px;font-weight: bold;color: yellowgreen}
+#nbr {font-weight: bold;color: lightcyan;}
+#btng2 {font-weight: bold;color: gold;}
+#btng4,.gy {font-weight: bold;color: black;background: greenyellow;}
+#btng5,.tan {font-weight: bold;color: tan;}
+#reload {height: 40px;font-weight: bold;color: yellowgreen;}
 </style>
     </head>
     <body><pre>
