add Vinaya one day

--- a/比丘比丘尼的一日戒律流程.html
+++ b/比丘比丘尼的一日戒律流程.html
@@ -19,7 +19,7 @@ input {height: 30px;}
 #div2 input {background:#aea;}
 #div3 input {background:#ff8;}
 #div4 input {background:#f99;}
-.name {background:tan;color: crimson;}
+.name {background:tan;color: darkred;}
 
 #txt1{width: 80vw;height: 30vh;}
 #ch1911,#ch1911x,.g {font-weight: bold;color: gold;}
@@ -52,11 +52,11 @@ input {height: 30px;}
 <h2 class="b">比丘比丘尼的一日戒律流程</h2>
 <h3 class="name">===初日分前===明相出前</h3>
 　<span class="m">應注意超過時限的戒律：</span><br/>
-　長衣過限戒<span class="o">,</span>離三衣宿戒<span class="o">,</span>月望衣戒<span class="o">,</span>畜長缽過限戒<span class="o">,</span>畜七日藥過限戒<span class="o">,</span>共未受具人宿過限戒<span class="o">,</span>有緣軍中過限戒<span class="o">,</span>過受四月藥請戒<span class="o">,</span>錢寶穀米十日內說淨<span class="o">,</span>內宿<span class="o">,</span>新衣不作壞色著戒(十日內點淨)<span class="o">,</span><br/>
+　長衣過限戒<span class="o">,</span>離三衣宿戒<span class="o">,</span>月望衣戒<span class="o">,</span>畜長缽過限戒<span class="o">,</span>畜七日藥過限戒<span class="o">,</span>共未受具人宿過限戒<span class="o">,</span>有緣軍中過限戒<span class="o">,</span>過受四月藥請戒<span class="o">,</span>錢寶穀米十日內說淨<span class="o">,</span>新衣不作壞色著戒(十日內點淨)<span class="o">,</span>內宿<span class="o">,</span><br/>
 　覆藏他重戒<span class="o">,</span>過畜十六枚器戒<span class="o">,</span>覆他殘罪戒<span class="o">,</span>縫僧伽梨過五日戒<span class="o">,</span>過五日不看僧伽梨戒<span class="o">,</span>經宿不辭主人去戒<span class="o">,</span>不安居戒<span class="o">,</span>安居竟不知請戒<span class="o">,</span><br/>
 <h3 class="name">===初日分開始===明相出後</h3>
 　<span class="m">可：離衣、入聚落乞食、受食、不破安居</span><br/>
-　奪三十五事：十一不得早入聚落<br/>
+　奪三十五事：十一不得早入聚落<span class="o">,</span>食殘宿食戒<span class="o">,</span><br/>
 <h3 class="name">===入村乞食前</h3>
 　<span class="m">眾學法威儀戒</span><br/>
 　　<span class="sb">著下裙時，當願眾生：服諸善根，具足慚愧。<br/>
@@ -92,21 +92,21 @@ input {height: 30px;}
 <h3 class="name">===午齋後</h3>
 <h3 class="name">===日中前</h3>
 <h3 class="name">===日中後</h3>
-　非時食戒<span class="o">,</span>食殘宿食戒<span class="o">,</span>非時入聚落戒<span class="o">,</span><br/>
+　非時食戒<span class="o">,</span>非時入聚落戒<span class="o">,</span><br/>
 <h3 class="name">===後日分前</h3>
 <h3 class="name">===後日分開始</h3>
 　奪三十五事：十二不得逼暮還<span class="o">,</span>向暮至白衣家戒<span class="o">,</span>向暮開僧伽藍門戒<span class="o">,</span>與尼說法至日暮戒<span class="o">,</span><br/>
 <h3 class="name">===初夜分前</h3>
 <h3 class="name">===初夜分開始</h3>
-　獨宿戒<span class="o">,</span>日沒開僧伽藍門戒<span class="o">,</span>初夜若行若坐。常爾一心念除諸蓋<br/>
+　獨宿戒<span class="o">,</span>日沒開僧伽藍門戒<span class="o">,</span>初夜若行若坐。常爾一心念除諸蓋<span class="o">,</span><br/>
 <h3 class="name">===中夜分前</h3>
 <h3 class="name">===中夜分開始</h3>
-　中夜息故入房舍<span class="o">,</span>中夜側右脇累脚而臥<br/>
+　中夜息故入房舍<span class="o">,</span>中夜側右脇累脚而臥<span class="o">,</span><br/>
 　　<span class="sb">以時寢息，當願眾生：身得安隱，心無動亂。</span><br/>
 <h3 class="name">===後夜分前</h3>
 <h3 class="name">===後夜分開始</h3>
-　後夜便起思惟若行若坐<br/>
-　聽一切眾未起明相未出應作羯磨說戒。更無方便可得宿受欲清淨羯磨說戒<span class="o">,</span>不即往大僧求具戒<span class="o">,</span><br/>
+　不即往大僧求具戒<span class="o">,</span>後夜便起思惟若行若坐<span class="o">,</span><br/>
+　聽一切眾未起明相未出應作羯磨說戒。更無方便可得宿受欲清淨羯磨說戒<span class="o">,</span><br/>
 　　<span class="sb">睡眠始寤，當願眾生：一切智覺，周顧十方。<br/>
 　　以水洗面，當願眾生：得淨法門，永無垢染。</span><br/>
 </body>
