GH vinaya book <br> to <p> && Index search txt html

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ background-repeat: no-repeat;*/
 .y {font-weight: bold;background: yellow;}
 .o {font-weight: bold;color: darkorange;}
 .yg {font-weight: bold;color: green;}
-.dc {font-weight: bold;color: darkcyan;}
+.dc {font-weight: bold;color: darkcyan;background: white;}
 .dg {font-weight: bold;color: salmon;}
 .b {font-weight: bold;color: blue;}
 .p {font-weight: bold;color: slateblue;}
@@ -245,7 +245,7 @@ background-repeat: no-repeat;*/
 .lg {font-weight: bold;color: limegreen;}
 .lsg {font-weight: bold;color: lightseagreen;}
 .da {font-weight: bold;color: darkred;}
-.bt {font-weight: bold;}
+.bt {font-weight: bold;background: #aca;}
 
 #mula {
     width: 80vw;
@@ -313,7 +313,7 @@ a {
 
 </style>
 <script>
-var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html","襌堂日行規矩1-1.html","行宗記.pdf","行 宗 記.html","行 宗 記.epub","缽之大小.pdf","缽之大小.docx","無上的佈施.docx","濟  緣  記.html","演講次序(對初學介紹戒定慧)1.pdf","演講次序(對初學介紹戒定慧).txt","演講次序(對初學介紹戒定慧).pdf","演講次序(對初學介紹戒定慧).docx","演講次序(安般念).pdf","演講次序(安般念).docx","演講次序(五戒).pdf","沙彌居士先閱律藏.txt","沙彌不得閱讀比丘戒.pdf","沙彌不得閱讀比丘戒.docx","汐止講義：沙彌尼初學戒律.pdf","汐止講義：沙彌尼初學戒律.docx","汐止講義：式叉重受、行法.txt","汐止講義：式叉重受、行法.pdf","汐止講義：式叉重受、行法.docx","汐止講義：四分律比丘尼戒本講記.txt","比丘比丘尼的一日戒律流程.txt","比丘比丘尼的一日戒律流程.html","戒律中用齋相關事.txt","戒律中用齋相關事.pdf","戒律中用齋相關事.docx","戒律中各戒條時限簡表.txt","戒律中各戒條時限簡表.pdf","戒律中各戒條時限簡表.html","慈悲喜捨的禪修方法：《清淨道論》梵住品.txt","慈悲喜捨的禪修方法：《清淨道論》梵住品.pdf","慈悲喜捨的禪修方法：《清淨道論》梵住品.docx","從初學到長期出家的佛學簡介.pptx","律藏會集_5種主題.html","廣嚴淨苑結大界唱相文.html","廣嚴淨苑結大界唱相文.docx","廣化律師全集.html","廣化律師全集(未受具閱讀版).html","居士犯五戒八戒可否再受戒及出家廣文.txt","居士出家前，家產應處理清楚.pdf","居士出家前，家產應處理清楚.docx","居士五戒八戒菩薩戒懺悔法.docx","居士五戒八戒菩薩戒懺悔法(圓體).pdf","四類藥.pdf","四分律隨機羯磨講義(全).pdf","四乘及五宗.pdf","四乘及五宗.docx","南普陀寺歷任主持簡史表(直式).xlsx","南普陀寺歷任主持簡史表(直式).pdf","南普陀寺歷任主持簡史表(直式).html","南普陀寺歷任主持簡史表(橫式).xlsx","南普陀寺歷任主持簡史表(橫式).pdf","南北傳明相.pdf","供養卡提那衣的意義(功德衣).pdf","佛恩寺結大界唱相文.html","五戒述要釋天因敬編.pdf","五戒述要釋天因敬編.docx","三時繫念疏文樣本.pdf","三時繫念疏文樣本.docx","三時繫念疏文樣本(小).pdf","三時繫念疏文樣本(小).docx","三寶物.pdf","三寶物.doc","README.md"]
+var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html","襌堂日行規矩1-1.html","行宗記.pdf","行 宗 記.html","行 宗 記.epub","缽之大小.pdf","缽之大小.docx","無上的佈施.docx","濟  緣  記.html","演講次序(對初學介紹戒定慧)1.pdf","演講次序(對初學介紹戒定慧).txt","演講次序(對初學介紹戒定慧).pdf","演講次序(對初學介紹戒定慧).docx","演講次序(安般念).pdf","演講次序(安般念).docx","演講次序(五戒).pdf","沙彌居士先閱律藏.txt","沙彌不得閱讀比丘戒.pdf","沙彌不得閱讀比丘戒.docx","汐止講義：沙彌尼初學戒律.pdf","汐止講義：沙彌尼初學戒律.docx","汐止講義：式叉重受、行法.txt","汐止講義：式叉重受、行法.pdf","汐止講義：式叉重受、行法.docx","汐止講義：四分律比丘尼戒本講記.txt","比丘比丘尼的一日戒律流程.txt","比丘比丘尼的一日戒律流程.html","戒律中用齋相關事.txt","戒律中用齋相關事.pdf","戒律中用齋相關事.docx","戒律中各戒條時限簡表.txt","戒律中各戒條時限簡表.pdf","戒律中各戒條時限簡表.html","慈悲喜捨的禪修方法：《清淨道論》梵住品.txt","慈悲喜捨的禪修方法：《清淨道論》梵住品.pdf","慈悲喜捨的禪修方法：《清淨道論》梵住品.docx","從初學到長期出家的佛學簡介.pptx","律藏會集_5種主題.html","廣嚴淨苑結大界唱相文.html","廣嚴淨苑結大界唱相文.docx","廣化律師全集.html","廣化律師全集.epub","廣化律師全集(未受具閱讀版).html","廣化律師全集(未受具閱讀版).epub","居士犯五戒八戒可否再受戒及出家廣文.txt","居士出家前，家產應處理清楚.pdf","居士出家前，家產應處理清楚.docx","居士五戒八戒菩薩戒懺悔法.docx","居士五戒八戒菩薩戒懺悔法(圓體).pdf","四類藥.pdf","四分律隨機羯磨講義(全).pdf","四乘及五宗.pdf","四乘及五宗.docx","南普陀寺歷任主持簡史表(直式).xlsx","南普陀寺歷任主持簡史表(直式).pdf","南普陀寺歷任主持簡史表(直式).html","南普陀寺歷任主持簡史表(橫式).xlsx","南普陀寺歷任主持簡史表(橫式).pdf","南北傳明相.pdf","供養卡提那衣的意義(功德衣).pdf","佛恩寺結大界唱相文.html","五戒述要釋天因敬編.pdf","五戒述要釋天因敬編.docx","三時繫念疏文樣本.pdf","三時繫念疏文樣本.docx","三時繫念疏文樣本(小).pdf","三時繫念疏文樣本(小).docx","三寶物.pdf","三寶物.doc","README.md"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
@@ -432,6 +432,16 @@ function mulaDiv() {
         j++
     }
 }
+// 後來檔案太多了，所以想要作「篩選按鈕」
+function MyIni(a) {
+    if (search.value != a) {
+        search.value = a
+    } else {
+        search.value = ''
+    }
+    // 要重新啟動dt()函數
+    dt()
+}
 function dt() {
     // 查詢，並動態呈現
     // 把輸入值轉小寫，就可以大小寫通查，因為在data-title已轉小寫
@@ -451,7 +461,9 @@ function dt() {
         <div id="Lumout">
         </div>
     <div id="mula">
-        <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()"></h1>
+        <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()">
+            <input id="cbr" type="button" class="dc" value="篩選出文字網頁檔" onclick="MyIni('t')">
+        </h1>
         <div data-title="四分律綱目.html" class="small"><a href="https://adbdao.github.io/my-adb.ini/v4search.html" class="bt">　0.　四分律綱目.html</a></div>
     </div>
     </body>
