--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
     <title>律藏會集、三大部、戒律諸書</title>
     <base target="_blank">
+    <link rel="icon" href="x-to-h/老和尚的蓮花.ico"/>
 <style>
 /**{border-radius: 8px;padding: 3px;}*/
 
